k8s/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1

metadata:
  name: uptime-monitor-app-ingress

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8000
